--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "symfony/mailer": "^7.2",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
