--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "league/oauth2-google": "^4.0",
+        "stripe/stripe-php": "^16.6",
         "symfony/mailer": "^7.2",
         "tymon/jwt-auth": "^2.1"
     },
