--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "axios": "^1.8.2",
+    "i18next": "^24.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "swiper": "^11.2.5"
